# StudyFinalMpi

FinalStudyMpi/: CMakeLists.txt  correcionPrueba.cpp  main.cpp
StudyOpenMP/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt  kernel.cu  main.cpp  main2.cpp
studyFinalMPI/: CMakeLists.txt  main  main.cpp
